--- a/www/partials/menuBar.html
+++ b/www/partials/menuBar.html
@@ -7,12 +7,14 @@
                 </a>
             </li>
             <li>
-                <a ui-sref-active="active" class="item item-icon-left " menu-close nav-clear ui-sref="home.availableClasses">
+                <a ui-sref-active="active" class="item item-icon-left " menu-close nav-clear
+                   ui-sref="home.availableClasses">
                     <i class="icon ion-ios7-bookmarks"></i> Available Classes
                 </a>
             </li>
             <li>
-                <a ui-sref-active="active" class="item item-icon-left " menu-close nav-clear ui-sref="home.myGroups" ui-sref-opts="{reload: true}">
+                <a ui-sref-active="active" class="item item-icon-left " menu-close nav-clear ui-sref="home.myGroups"
+                   ui-sref-opts="{reload: true}">
                     <i class="icon ion-ios7-people"></i> Training Centers
                 </a>
             </li>
@@ -45,17 +47,20 @@
                 Resources
             </li>
             <li>
-                <a ng-click="goToLink('http://www.dshs.state.tx.us/mch/chw.shtm')" target="_blank" class="item" style="margin-left: -40px">
+                <a ng-click="goToLink('http://www.dshs.state.tx.us/mch/chw.shtm')" target="_blank" class="item"
+                   style="margin-left: -40px">
                     Texas - DSHS
                 </a>
             </li>
             <li>
-                <a ng-click="goToLink('http://www.setexasrhp.com/go/doc/6182/2056886/')" target="_blank" class="item" style="margin-left: -40px">
+                <a ng-click="goToLink('http://www.setexasrhp.com/go/doc/6182/2056886/')" target="_blank" class="item"
+                   style="margin-left: -40px">
                     SE Texas Healthcare Partnership
                 </a>
             </li>
             <li>
-                <a ng-click="goToLink('http://txgulfcoastchws.org/')" target="_blank" class="item" style="margin-left: -40px">
+                <a ng-click="goToLink('http://txgulfcoastchws.org/')" target="_blank" class="item"
+                   style="margin-left: -40px">
                     Texas Gulf Coast Association
                 </a>
             </li>
