--- a/www/partials/header.html
+++ b/www/partials/header.html
@@ -1,5 +1,6 @@
 <ion-view>
-    <ion-slide-box auto-play="true" does-continue="true" on-slide-changed="slideChanged(index)" style="height:150px; background-color: #229955">
+    <ion-slide-box auto-play="true" does-continue="true" on-slide-changed="slideChanged(index)"
+                   style="height:150px; background-color: #229955">
         <ion-slide>
             <img style="width:100%;" src="img/slider/collage1.jpg">
         </ion-slide>
