--- a/www/partials/editTask.html
+++ b/www/partials/editTask.html
@@ -18,12 +18,20 @@
         </label>
         <label class=" item-input">
             <span class="input-label">Description</span>
-            <textarea style="max-width:65%" id="description" ng-model="$parent.editTask.description" rows="6"></textarea>
+            <textarea style="max-width:65%" id="description" ng-model="$parent.editTask.description"
+                      rows="6"></textarea>
         </label>
+
         <div class="button-bar">
-            <ion-checkbox ng-model="$parent.editTask.active" ng-true-value="1" ng-false-value="0" class="button"><i class=" medal-modal ion-eye"></i><br>Active</ion-checkbox>
-            <ion-checkbox ng-model="$parent.editTask.forCHW" ng-true-value="0" ng-false-value="1" class="button"><i class=" medal-modal ion-university"></i><br>Instructor</ion-checkbox>
-            <ion-checkbox ng-model="$parent.editTask.forCredit" ng-true-value="1" ng-false-value="0"  class="button"><i class=" medal-modal ion-ribbon-b"></i><br> Credit</ion-checkbox>
+            <ion-checkbox ng-model="$parent.editTask.active" ng-true-value="1" ng-false-value="0" class="button"><i
+                class=" medal-modal ion-eye"></i><br>Active
+            </ion-checkbox>
+            <ion-checkbox ng-model="$parent.editTask.forCHW" ng-true-value="0" ng-false-value="1" class="button"><i
+                class=" medal-modal ion-university"></i><br>Instructor
+            </ion-checkbox>
+            <ion-checkbox ng-model="$parent.editTask.forCredit" ng-true-value="1" ng-false-value="0" class="button"><i
+                class=" medal-modal ion-ribbon-b"></i><br> Credit
+            </ion-checkbox>
         </div>
         <label class="item-input">
             <span class="input-label"> Cores </span>
