--- a/www/css/desktop_app.css
+++ b/www/css/desktop_app.css
@@ -33,4 +33,20 @@
         padding-right: 25%;
         padding-left: 25%;
     }
+
+
+    div#banner {
+        position: absolute;
+        z-index: 9999999;
+        top: 0;
+        left: 0;
+        background-color: #FFa236;
+        width: 100%;
+    }
+    div#banner-content {
+        width: 800px;
+        margin: 0 auto;
+        padding: 10px;
+        text-align: center;
+    }
 }
