update function on updateGroups to allow cacheInvalidate boolean. Updated 4x modal HTML files to overflow-y:auto

--- a/www/partials/addGroup.html
+++ b/www/partials/addGroup.html
@@ -1,4 +1,4 @@
-<ion-modal-view>
+<ion-modal-view style="overflow-y:scroll">
     <ion-header-bar class="bar bar-header bar-dark">
         <h1 class="title">Add Training Center</h1>
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
