--- a/www/partials/editGroup.html
+++ b/www/partials/editGroup.html
@@ -1,9 +1,9 @@
-<ion-modal-view>
+<ion-modal-view style="overflow-y:scroll">
     <ion-header-bar class="bar bar-header bar-dark">
         <h1 class="title">Edit Training Center</h1>
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
     </ion-header-bar>
-    <div style="margin-top:50px;">
+    <div style="margin-top:50px">
         <label class=" item-input">
             <span class="input-label">Center Name</span>
             <input type="text" ng-model="editGroupNew.name">
