--- a/www/partials/addTask.html
+++ b/www/partials/addTask.html
@@ -1,4 +1,4 @@
-<div class="modal" style="overflow-y:scroll">
+<div class="modal">
     <ion-header-bar class="bar bar-header bar-dark">
         <h1 class="title">Add Class</h1>
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
