Re-enabled add TC function for Adm only

--- a/www/partials/addGroup.html
+++ b/www/partials/addGroup.html
@@ -3,7 +3,7 @@
         <h1 class="title">Add Training Center</h1>
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
     </ion-header-bar>
-    <div class="list-tc">
+    <div style="margin-top:50px" class="list-tc">
         <label class="item-input">
             <input type="text" ng-model="newGroup.name" placeholder="Center Name">
         </label>
