--- a/www/partials/myGroups.html
+++ b/www/partials/myGroups.html
@@ -1,13 +1,8 @@
 <ion-view title="Training Centers" cache-view="false">
+    <ion-nav-buttons side='secondary'>
+        <button class="button button-clear" ng-show="isAdm" ng-click="addGroup()"><i class="icon ion-plus-round"> </i></button>
+    </ion-nav-buttons>
     <ion-content>
-        <ion-nav-buttons side='right'>
-            <button class="button button-dark button-clear" ng-show="isAdm || isMod" ng-click="addGroup()"><i
-                class="icon ion-plus-round"> </i></button>
-        </ion-nav-buttons>
-        <ion-nav-buttons side='right'>
-            <button class="button button-dark button-clear" ui-sref="home.joinGroups"><i class="icon ion-search"> </i>
-            </button>
-        </ion-nav-buttons>
         <div class="item" ng-show="groups.length == 0 || groups === undefined">
             <center>
                 You don't seem to have joined any groups! <br/>
