--- a/www/partials/addClassCSV.html
+++ b/www/partials/addClassCSV.html
@@ -4,6 +4,13 @@
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
     </ion-header-bar>
     <ion-content>
-        <input type="file" ID="fileSelect" accept=".csv" />
+        <ng-csv-import content="$parent.$parent.$parent.$parent.$parent.csv.content"
+                       header="$parent.$parent.$parent.$parent.$parent.csv.header"
+                       separator="$parent.$parent.$parent.$parent.$parent.csv.separator"
+                       result="$parent.$parent.$parent.$parent.$parent.csv.result"></ng-csv-import>
+        <button ng-click="check()">CHECK</button>
+        <div>
+            {{csv}}
+        </div>
     </ion-content>
 </div>
