--- a/www/partials/groupFeed.task.html
+++ b/www/partials/groupFeed.task.html
@@ -1,7 +1,7 @@
 <ion-view title="Classes">
     <ion-nav-buttons side='right'>
-        <button class="button button-clear" ng-show="isAdm || isMod" ng-click="addTask()"><i
-            class="icon ion-plus-round"> </i></button>
+        <button class="button button-clear" ng-show="isAdm || isMod" ng-click="addTaskCSV()"><i class="icon ion-plus-round"> </i></button>
+        <button class="button button-clear" ng-show="isAdm || isMod" ng-click="addTask()"><i class="icon ion-plus-round"> </i></button>
     </ion-nav-buttons>
     <ion-header-bar align-title="left" class="bar-dark bar-subheader">
         <div class="bar bar-header item-input-inset">
