Essentially done with CSV import.

--- a/www/partials/addClassCSV.html
+++ b/www/partials/addClassCSV.html
@@ -10,6 +10,8 @@
                        header="$parent.$parent.$parent.$parent.$parent.csv.header"
                        separator="$parent.$parent.$parent.$parent.$parent.csv.separator"
                        result="$parent.$parent.$parent.$parent.$parent.csv.result"></ng-csv-import>
+
+        Use the <a href="partials/CSVClassTemplate.xlsm" download>CSV Template</a> to enter class data. When done, save as CSV file format and upload here.
         <button class="button button-full button-dark submit" ng-click="ok()">Submit</button>
     </ion-content>
 </div>
