--- a/www/partials/menuBar.html
+++ b/www/partials/menuBar.html
@@ -40,7 +40,7 @@
             </li>
             <li>
                 <a ui-sref-active="active" class="item item-icon-left " menu-close nav-clear ui-sref="home.intro">
-                    <i class="icon ion-ios-information"></i> About
+                    <i class="icon ion-ios-information"></i> Help
                 </a>
             </li>
             <li class="item item-divider">
