--- a/www/partials/availableClasses.html
+++ b/www/partials/availableClasses.html
@@ -12,16 +12,11 @@
         </div>
     </ion-header-bar>
     <ion-content>
-        <div class="item"
-             ng-show="query.finished == 0 && !(tasks.length == 0 || tasks === undefined) && (isAdm || isMod)">
-            <center>Showing upcoming classes.</center>
-        </div>
-        <div class="item"
-             ng-show="query.finished == 1 && !(tasks.length == 0 || tasks === undefined) && (isAdm || isMod)">
-            <center>Showing past classes.</center>
+        <div class="item">
+            <center>Displaying {{filtered.length}} of {{ (tasks | filter: {active: 1}).length }} classes based on search query and filters.</center>
         </div>
         <div class="list card my-item"
-             ng-repeat="task in tasks | orderBy: 'time' | filter: query | selectCores: indexCoresInput track by $index">
+             ng-repeat="task in filtered = (tasks | orderBy: 'time' | filter: query | selectCores: indexCoresInput)">
             <div class="item item-avatar item-icon-right" ng-click="viewTask(task.id)">
                 <img src="img/classes-icon.png" width="60" height="50"/>
 
