--- a/www/partials/groupFeed.task.html
+++ b/www/partials/groupFeed.task.html
@@ -15,20 +15,12 @@
         </div>
     </ion-header-bar>
     <ion-content>
-        <div class="item" ng-show="tasks.length == 0 || tasks === undefined">
+        <div class="item">
             <center>
-                This location doesn't seem to have any classes...
+                Displaying {{filtered.length}} of {{tasks.length}} classes based on search query and filters.
             </center>
         </div>
-        <div class="item"
-             ng-show="query.finished == 0 && !(tasks.length == 0 || tasks === undefined) && (isAdm || isMod)">
-            <center>Showing only upcoming classes.</center>
-        </div>
-        <div class="item"
-             ng-show="query.finished == 1 && !(tasks.length == 0 || tasks === undefined) && (isAdm || isMod)">
-            <center>Showing only past classes.</center>
-        </div>
-        <div class="list card" ng-repeat="task in tasks | orderBy: 'time' | filter: query | filter: queryText">
+        <div class="list card" ng-repeat="task in filtered = (tasks | orderBy: 'time' | filter: query | selectCores: indexCoresInput)">
             <div class="item item-avatar item-icon-right" ng-click="viewTask(task.id)">
                 <img src="img/classes-icon.png" width="60" height="50"/>
 
