--- a/www/partials/editTask.html
+++ b/www/partials/editTask.html
@@ -61,7 +61,9 @@
             <span class="input-label">Address</span>
             <input id="location" type="text" ng-model="$parent.editTask.address"/>
         </label>
-        <button ng-click="duplicate()" class="button button-dark submit">Save As New</button>
-        <button class="button button-full button-dark submit" ng-click="ok()">Submit</button>
+        <div class="button-bar">
+            <button ng-click="duplicate()" class="button button-dark submit">Duplicate</button>
+            <button class="button button-dark submit" ng-click="ok()">Submit</button>
+        </div>
     </ion-content>
 </div>
