--- a/www/partials/addTask.html
+++ b/www/partials/addTask.html
@@ -60,6 +60,6 @@
             <span class="input-label">Address</span>
             <input id="location" type="text" ng-model="$parent.newTask.address"/>
         </label>
-        <button class="button button-full button-dark submit" ng-click="ok()">Submit</button>
+        <button class="button button-full button-dark submit" ng-click="ok()">Save</button>
     </ion-content>
 </div>
