--- a/www/partials/editTask.html
+++ b/www/partials/editTask.html
@@ -63,7 +63,7 @@
         </label>
         <div class="button-bar">
             <button ng-click="duplicate()" class="button button-dark submit">Duplicate</button>
-            <button class="button button-dark submit" ng-click="ok()">Submit</button>
+            <button class="button button-dark submit" ng-click="ok()">Save</button>
         </div>
     </ion-content>
 </div>
