Added dividers before/after the inputs on add/edit class modals.

--- a/www/partials/addTask.html
+++ b/www/partials/addTask.html
@@ -4,7 +4,7 @@
         <button class="button button-clear button-primary" ng-click="modal.hide()">Cancel</button>
     </ion-header-bar>
     <ion-content>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Name</span>
             <input id="name" type="text" ng-model="$parent.newTask.name" placeholder="Name of Class" required/>
         </label>
@@ -20,24 +20,24 @@
             <input id="duration" type="number" ng-model="$parent.newTask.duration" placeholder="Duration of Class (hours)"
                    step=".25"/>
         </label>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Cost</span>
             <input id="cost" type="text" ng-model="$parent.newTask.cost" placeholder="Cost of Class"/>
         </label>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Description</span>
             <textarea style="max-width:65%" id="description" ng-model="$parent.newTask.description"
                       placeholder="Enter Description for class here." rows="3"></textarea>
         </label>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Room</span>
             <input id="room" type="text" ng-model="$parent.newTask.room" placeholder="Room Number for Class"/>
         </label>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Address</span>
             <input id="location" type="text" ng-model="$parent.newTask.address" placeholder="Address of Class"/>
         </label>
-        <label class=" item-input">
+        <label class="item item-input">
             <span class="input-label">Registration Info</span>
             <textarea style="max-width:65%" id="registration_info" ng-model="$parent.newTask.registration_info"
                       rows="3" placeholder="Enter Additional Registration information here."></textarea>
